static/css/app.css
html{
    --off-canvas-content-bg: #fefefe;
    --accordion-submenu-parent-bg: #4d5158; 
    --off-canvas-pos-left-bg: #e6e6e6;
}
  
html[dark=''] {
    --off-canvas-content-bg: #191b1c;
    --accordion-submenu-parent-bg: #101010; 
    --off-canvas-pos-left-bg: #151718;
}

/*.is-accordion-submenu-parent a*/ [data-accordion-menu] li a {
    background: var(--accordion-submenu-parent-bg);
}

[data-accordion-menu] .is-accordion-submenu a {
    background: #35383d;
}

.sublevel-1 {
    text-indent: 1rem;
}

.sublevel-2 {
    text-indent: 2rem;
}

[data-accordion-menu] a {
    color: #fff;
    box-shadow: inset 0 -1px #41444a;
}

[data-accordion-menu] a::after {
    border-color: #fff transparent transparent;
}

.menu > li:not(.menu-text) > a {
    padding: 1.2rem 1rem;
}

.menu .active > a {
    color: #fefefe;
    background: #2199e8;
}

/* Fixes to foundation framework */
#application-menu {
    box-shadow: 0 0 10px hsla(0, 0%, 4%, 0.5);
    min-height: 100%;
}

.off-canvas-content {
    box-shadow: none;
}

.off-canvas.position-left {
    background-color: var(--off-canvas-pos-left-bg);
}

@media screen and (min-width: 64em) {
    .position-left.reveal-for-large ~ .off-canvas-content {
        margin-left: 260px; /* Needed to respect the border shadow*/
    }
}

@media print {
    [class^="theme"] {
      display: none !important;
    }
}

.theme-toggle{
    position: fixed;
    top: 1rem;
    right: 1rem;
    z-index: 1;
}

.theme{
    height: 40px;
    width: 40px;
    -moz-border-radius: 20px; 
    -webkit-border-radius: 20px; 
    border-radius: 20px;
    padding-top: 4px;
    display: flex;
    justify-content: center;
}

.theme:hover {
    border: solid 1px #418cec;
    transform: scale(1.2);
    box-shadow: 0 0.5em 0.5em rgba(0, 0, 0, 0.4);
}

.to-dark {
    color: white;
    background-color: black;
}

.to-light {
    color: rgb(145, 255, 0);
    background-color: white;
}

.hidden {
    display: none;
}

label {
    font-size: 16px;
}

label.success {
    background-color: #e1faea;
    padding: 0 5px;
    border-radius: 5px;
}
label.warning {
    background-color: #fff3d9;
    padding: 0 5px;
    border-radius: 5px;
}
label.alert {
    background-color: #fce6e2;
    padding: 0 5px;
    border-radius: 5px;
}

.user-actions i, #pageTable th i, #serviceTable i, #rulesTable i, #deployments i, #profile_configuration i {
    display: inline-block;
    cursor: pointer;
}

#pageTable th i {
    color: red;
}

table.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sorttable_nosort):after {
    content: " \25B4\25BE"
}

table.stack tfoot {
    display: table-footer-group;
}

/* Fancy checkbox */
.hideCheckbox,
.hideRadiobutton {
    display: none;
}

input[type="checkbox"] + label span {
    display: inline-block;
    position: absolute;
    top: 0;
    left: 0;
}

input[type="checkbox"] + label span::before {
    content: "\f096";
    font-family: FontAwesome;
    font-size: 18px;
    cursor: pointer;
}

input[type="checkbox"]:checked + label span::before {
    content: "\f046";
}

input[type="checkbox"]:disabled +  label span::before {
    color: grey;
    cursor: not-allowed;
}

.auth_access_ajax {
    vertical-align: middle;
}

.auth_access_fieldset {
    position: relative;
    display: inline-block;
}
@media only screen and (min-width: 720px) {
    ol.progtrckr li {
        width: 25%;
    }
}
@media only screen and (max-width: 400px) {
    ol.progtrckr li {
        font-size: smaller;
    }
}
ol.progtrckr {
    display: table;
    list-style-type: none;
    padding: 0;
    table-layout: fixed;
    width: 100%;
    margin: 0 0 2em;
    min-width: 20em;
}
ol.progtrckr li {
    display: inline-block;
    text-align: center;
    line-height: 3em;
}
@-moz-document url-prefix() {
    ol.progtrckr li {
        margin: 0 -2px 0px -3px;
    }
}

ol.progtrckr[data-progtrckr-steps="2"] li { width: 49%; }
ol.progtrckr[data-progtrckr-steps="3"] li { width: 33%; }
ol.progtrckr[data-progtrckr-steps="4"] li { width: 24%; }
ol.progtrckr[data-progtrckr-steps="5"] li { width: 19%; }
ol.progtrckr[data-progtrckr-steps="6"] li { width: 16%; }
ol.progtrckr[data-progtrckr-steps="7"] li { width: 14%; }
ol.progtrckr[data-progtrckr-steps="8"] li { width: 12%; }
ol.progtrckr[data-progtrckr-steps="9"] li { width: 11%; }

ol.progtrckr li.progtrckr-done {
    color: black;
    border-bottom: 4px solid yellowgreen;
}
ol.progtrckr li.progtrckr-todo {
    color: silver;
    border-bottom: 4px solid silver;
}
ol.progtrckr li.progtrckr-running {
    color: black;
    border-bottom: 4px solid orange;
}

ol.progtrckr li::after {
    content: "\00a0\00a0";
}
ol.progtrckr li::before {
    position: relative;
    bottom: -2.5em;
    float: left;
    left: 50%;
    line-height: 1em;
}
ol.progtrckr li.progtrckr-done::before {
    content: "\2713";
    color: white;
    background-color: yellowgreen;
    height: 1.2em;
    width: 1.2em;
    line-height: 1.2em;
    border: none;
    border-radius: 1.2em;
}
ol.progtrckr li.progtrckr-todo::before {
    content: "\039F";
    color: silver;
    background-color: #FEFEFE;
    font-size: 1.5em;
    bottom: -1.6em;
}
ol.progtrckr li.progtrckr-running::before {
    content: "\231B";
    color: black;
    background-color: orange;
    height: 1.2em;
    width: 1.2em;
    line-height: 1.2em;
    border: none;
    border-radius: 1.2em;
}


ol.progtrckr li.progtrckr-running.error::before {
    background-color: red;
    content: "x";
}

ol.progtrckr li.progtrckr-running.error {
    border-color: red;
}

.category-header {
    cursor: pointer;
}

.category-header.pass {
    color: green;
}

.category-header.fail {
    color: red;
}

.diff_link {
    cursor: pointer;
}

/* Diff generation */
table.diff {
    font-weight: 100;
    line-height: 1;
}

table.diff td {
    padding: 0.1rem;
}

table.diff td.diff_header {
    padding-left: 0.5rem;
}

.diff-same-region {
	display: inline;
	color: #3BA3D0;
}

.diff-table-td {
	padding-top: 3px;
	padding-left: 10px;
	padding-bottom: 3px;
	font-family: monospace;
}

.diff-div-text {
	color: #d88484;
	display:inline;
	font-family: monospace;
}


/* Responsive Tables */
@media only screen and (max-width: 800px) {
    /* Force table to not be like tables anymore */
    #no-more-tables table,
    #no-more-tables thead,
    #no-more-tables tbody,
    #no-more-tables th,
    #no-more-tables td,
    #no-more-tables tr {
        display: block;
    }

    #no-more-tables tbody {
        padding: 10px;
    }

    /* Hide table headers (but not display: none;, for accessibility) */
    #no-more-tables thead tr {
        position: absolute;
        top: -9999px;
        left: -9999px;
    }

    #no-more-tables tr {
        border: 1px solid #ccc;
    }

    #no-more-tables td {
        /* Behave  like a "row" */
        border: none;
        border-bottom: 1px solid #eee;
        position: relative;
        padding-left: 50%;
        white-space: normal;
        text-align: left;
    }

    #no-more-tables td:before {
        /* Now like a table header */
        position: absolute;
        /* Top/left values mimic padding */
        top: 6px;
        left: 6px;
        width: 45%;
        padding-right: 10px;
        white-space: nowrap;
        text-align: left;
        font-weight: bold;
    }

    /*
    Label the data
    */
    #no-more-tables td:before {
        content: attr(data-title);
    }
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
menu,
nav,
section,
summary {
    display: block;
    padding-bottom: 0.5%;
}

footer{
    position:fixed;
    bottom:0;
    background-color: var(--off-canvas-content-bg);
}

.row {
    max-width: 75rem;
    margin-left: 2%;
    margin-right: 2%;
}

.columns {
    width: 100%;
    word-wrap: break-word;
    float: left;
    padding-left: .625rem;
    padding-right: .625rem
}

table.stack td {
    border-top: 0;
    word-break: break-all;
}

input.toggle-round + label {
  padding: 2px;
  width: 100px;
  height: 30px;
  background-color: #dddddd;
  -webkit-border-radius: 30px;
  -moz-border-radius: 30px;
  -ms-border-radius: 30px;
  -o-border-radius: 30px;
  border-radius: 30px;
}
input.toggle-round + label:before, input.toggle-round + label:after {
  display: block;
  position: absolute;
  top: 1px;
  left: 1px;
  bottom: 1px;
  content: "";
}
input.toggle-round + label:before {
  right: 1px;
  background-color: #f1f1f1;
  -webkit-border-radius: 30px;
  -moz-border-radius: 30px;
  -ms-border-radius: 30px;
  -o-border-radius: 30px;
  border-radius: 30px;
  -webkit-transition: background 0.4s;
  -moz-transition: background 0.4s;
  -o-transition: background 0.4s;
  transition: background 0.4s;
}
input.toggle-round + label:after {
  width: 40px;
  background-color: #fff;
  -webkit-border-radius: 100%;
  -moz-border-radius: 100%;
  -ms-border-radius: 100%;
  -o-border-radius: 100%;
  border-radius: 100%;
  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
  -moz-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
  -webkit-transition: margin 0.4s;
  -moz-transition: margin 0.4s;
  -o-transition: margin 0.4s;
  transition: margin 0.4s;
}
input.toggle-round:checked + label:before {
  background-color: #8ce196;
}
input.toggle-round:checked + label:after {
  margin-left: 60px;
}

.toggle {
  position: absolute;
  margin-left: -9999px;
  visibility: hidden;
}
.toggle + label {
  display: block;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.column, .columns {
  width: 100%;
  float: left;
  padding-left: 0.625rem;
  padding-right: 0.625rem; }
  @media screen and (min-width: 40em) {
    .column, .columns {
      padding-left: 0.9375rem;
      padding-right: 0.9375rem; } }
  .column:last-child:not(:first-child), .columns:last-child:not(:first-child) {
    float: right; }
  .column.end:last-child:last-child, .end.columns:last-child:last-child {
    float: left; }

.flow {
    background: var(--off-canvas-content-bg);
    display: flow-root;
    padding-bottom: 50px;
}

.loader {
    display: inline-block;
    border: 3px solid #f3f3f3;
    border-radius: 50%;
    border-top: 3px solid #3498db;
    width: 20px;
    height: 20px;
    -webkit-animation: spin 2s linear infinite; /* Safari */
    animation: spin 2s linear infinite;
  }

/* Safari */
@-webkit-keyframes spin {
    0% { -webkit-transform: rotate(0deg); }
    100% { -webkit-transform: rotate(360deg); }
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

.tag:nth-child(even) {
    border: 1px solid #c8e1ff;
}

.tag:nth-child(odd) {
    color: #1779ba;
    border: 1px solid #c8e1ff;
}

.tag {
    display: inline-block;
    background-color: var(--off-canvas-content-bg);
    padding: 5px 10px;
    border-radius: 4px;
    margin-right: 5px;
    font-size: 14px;
}

